--- a/kor/main/index.html
+++ b/kor/main/index.html
@@ -624,7 +624,7 @@ include "../../include/dbconn.html";
                         end: "bottom bottom",
                         scrub: 1,
                         pin: true,
-                        markers: true
+                        // markers: true
                     },
                 });
                 tl.to(".img_01 img:first-child", {
@@ -638,7 +638,7 @@ include "../../include/dbconn.html";
                         end: "bottom bottom",
                         scrub: 1,
                         pin: true,
-                        markers: true,
+                        // markers: true,
                     },
                     defaults: {
                         duration: 10,
@@ -685,10 +685,10 @@ include "../../include/dbconn.html";
                         top: "0",
                     })
                     .to(".img_03 img:nth-of-type(2)", {
-                        top: "30%",
+                        top: "10%",
                     },'<')
                     .to(".img_03 img:nth-of-type(4)", {
-                        top: "20%",
+                        top: "10%",
                     },'<')
                     .to(".img_03 img:nth-of-type(3)", {
                         top: '10%',
