--- a/kor/main/index.html
+++ b/kor/main/index.html
@@ -105,10 +105,33 @@ include "../../include/dbconn.html";
                 <? } ?>
             </ul>
 
-            <div class="header_ham">
+            <div id="header_ham">
                 <span></span>
                 <span></span>
                 <span></span>
+            </div>
+
+            <div id="header_full">
+                <article>
+                    <nav class="status">
+                        <a href="../member/login.html">
+                            <img src="../images/common/ico_login_01.svg" alt="">Log in
+                        </a>
+                    </nav>
+                    <nav class="menu">
+                        <ul class="depth_01">
+                            <li><a href="">CMF Library</a></li>
+                            <li><a href="">Trend Library</a></li>
+                            <li><a href="">Category</a></li>
+                            <li><a href="">Portfolio</a></li>
+                            <li><a href="">Contact</a></li>
+                        </ul>
+                        <ul class="user_depth">
+                            <li><a href="">My account</a></li>
+                            <li><a href="">Log out</a></li>
+                        </ul>
+                    </nav>
+                </article>
             </div>
 
 
