세이프닥, 출출타임 백작업해야함

--- a/kor/main/index.html
+++ b/kor/main/index.html
@@ -653,7 +653,7 @@ include "../../include/dbconn.html";
                         end: "bottom bottom",
                         scrub: 1,
                         pin: true,
-                        // markers: true
+                        markers: true
                     },
                 });
                 tl.to(".img_01 img:first-child", {
@@ -728,10 +728,10 @@ include "../../include/dbconn.html";
                     scrollTrigger: {
                         trigger: ".ms_03 .box_01 .img_wrap",
                         start: "top top",
-                        end: "bottom bottom",
+                        end: "+=50%",
                         scrub: 1,
                         pin: true,
-                        // markers: true
+                        markers: true
                     },
                 });
                 tl.to(".img_01 img:first-child", {
@@ -742,10 +742,10 @@ include "../../include/dbconn.html";
                     scrollTrigger: {
                         trigger: ".ms_03 .box_02 .img_wrap",
                         start: "top top",
-                        end: "bottom bottom",
+                        end: "+=50%",
                         scrub: 1,
                         pin: true,
-                        // markers: true,
+                        markers: true,
                     },
                     defaults: {
                         duration: 10,
@@ -776,10 +776,10 @@ include "../../include/dbconn.html";
                     scrollTrigger: {
                         trigger: ".ms_03 .box_03 .img_wrap",
                         start: "top top",
-                        end: "bottom bottom",
+                        end: "+=50%",
                         pin: true,
                         scrub: 1,
-                        // markers: true
+                        markers: true
                     },
                     defaults: {
                         duration: 10,
@@ -795,7 +795,7 @@ include "../../include/dbconn.html";
                         top: 150,
                     },'<')
                     .to(".img_03 img:nth-of-type(4)", {
-                        top: 250,
+                        top: 200,
                     },'<')
                     .to(".img_03 img:nth-of-type(3)", {
                         top: 300,
