--- a/kor/main/index.html
+++ b/kor/main/index.html
@@ -732,6 +732,7 @@ include "../../include/dbconn.html";
                     scrollTrigger: {
                         trigger: ".ms_03 .box_02 .img_wrap",
                         start: "top top",
+                        end: "bottom bottom",
                         scrub: 1,
                         pin: true,
                         markers: true,
