--- a/kor/member/search.html
+++ b/kor/member/search.html
@@ -1,144 +1,5 @@
 <?
-$h_menu = "member";
 include "../include/header.html";
 include "../include/session_check.html";
 ?>
-
-    <main class="sub_page search" id="member">
-
-        <section class="sec">
-            <article class="wrap">
-
-                <div class="tit">
-                    <h2>ID/PW 찾기</h2>
-                    <p>에프앤디넷 닥터브랜드 홈페이지에 오신 것을 환영합니다.</p>
-                </div>
-
-                <div class="layout_box">
-                    <div class="search_type">
-                        <a class="active" href="#none">아이디찾기</a>
-                        <a href="#none">비밀번호찾기</a>
-                    </div>
-
-                    <div class="form_wrap">
-
-                        <form action="./db_exec.html" method="post" class="active">
-                            <input type="hidden" name="mode" value="find_id">
-                            <div class="user_input">
-                                <label>
-                                    <p class="box_01">이름</p>
-                                    <input type="text" name="f_name" id="" required>
-                                </label>
-
-                                <label>
-                                    <p class="box_01">생년월일</p>
-                                    <div class="input_wrap">
-                                        <select name="f_b_y" id="year" required></select>
-                                        <select name="f_b_m" id="month" required></select>
-                                        <select name="f_b_d" id="day" required></select>
-                                    </div>
-                                </label>
-
-                                <label>
-                                    <p class="box_01">전화번호</p>
-                                    <div class="input_wrap">
-                                        <select name="f_tel" required>
-                                            <option value="010">010</option>
-                                            <option value="011">011</option>
-                                            <option value="016">016</option>
-                                            <option value="017">017</option>
-                                            <option value="018">018</option>
-                                            <option value="019">019</option>
-                                        </select>
-                                        <input name="f_tel_01" type="number" required>
-                                        <input name="f_tel_02" type="number" required>
-                                    </div>
-                                </label>
-                            </div>
-
-                            <div class="user_help">
-                                <p>회원가입 시에 입력하신 정보를 입력해주세요</p>
-                                <input class="btn submit" type="submit" value="확인">
-                            </div>
-
-                        </form>
-                        
-
-                        <form action="./db_exec.html" method="post">
-                            <input type="hidden" name="mode" value="find_pw">
-
-                            <div class="user_input">
-                                <label>
-                                    <p class="box_01">이메일</p>
-                                    <input type="email" name="f_email" id="" required>
-                                </label>
-
-                                <label>
-                                    <p class="box_01">이름</p>
-                                    <input type="text" name="f_name" id="" required>
-
-                                </label>
-
-                                <label>
-                                    <p class="box_01">전화번호</p>
-                                    <div class="input_wrap">
-                                        <select name="f_tel" required>
-                                            <option value="010">010</option>
-                                            <option value="011">011</option>
-                                            <option value="016">016</option>
-                                            <option value="017">017</option>
-                                            <option value="018">018</option>
-                                            <option value="019">019</option>
-                                        </select>
-                                        <input name="f_tel_01" type="number" required>
-                                        <input name="f_tel_02" type="number" required>
-                                    </div>
-                                </label>
-                            </div>
-
-                            <div class="user_help">
-                                <p>회원가입 시에 입력하신 정보를 입력해주세요</p>
-                                <input class="btn submit" type="submit" value="확인">
-                            </div>
-
-                        </form>
-                        
-                    </div>
-                </div>
-
-            </article>
-        </section>
-
-    </main>
-
-    <script>
-        $('.search_type a').click(function() {
-            let idx = $(this).index();
-            $('.search_type a').removeClass('active');
-            $(this).addClass('active')
-
-
-            $('.form_wrap form').removeClass('active');
-            $('.form_wrap form').eq(idx).addClass('active');
-        })
-
-        function ymdFor() {
-            for (var i = 2021; i > 1920; i--) {
-                $('#year').append('<option value="' + i + '">' + i + '</option>');
-            }
-            for (var i = 1; i < 13; i++) {
-                $('#month').append('<option value="' + i + '">' + i + '</option>');
-            }
-            for (var i = 1; i < 32; i++) {
-                $('#day').append('<option value="' + i + '">' + i + '</option>');
-            }
-        }
-        ymdFor();
-    </script>
-
-
-
-
-<?
-include "../include/footer.html";
-?>
+<!-- del -->
